# graphql-demo

./: README.md
client-ng/: README.md  angular.json  package-lock.json  package.json
client-ng/src/: styles.scss
client-ng/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  graphql.module.ts
client-ng/src/app/services/: graph.service.ts
server/: graph.ts  package-lock.json  package.json  readme.md
server-python/: README.md  db.py  main.py  pyproject.toml  resolver.py  schema.py
server-python/tests/: test_server_python.py
server/client-files/: basicQuery.ts
server/src/: context.ts  db.ts  index.ts  schema.ts  server.ts
server/src/resolvers/: index.ts
server/src/resolvers/mutations/: publishPost.ts  startFollowing.ts  stopFollowing.ts
